fixes some spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -155,6 +155,7 @@ $breakpoint-mobile: 500px;
 }
 
 .zaddr-input {
+  margin-top:1rem;
   width:90%;
   height:2rem;
 }
